--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -29,7 +29,7 @@ permalink: "get-started/css-classes-shortcuts/index.html"
 
   <h1 class="mt-lg-0">CSS classes shortcuts</h1>
   <p>
-   The template uses CSS classes to display a consistent look and feel. We provide these so you can easily find and use
+   The State Web Template uses CSS classes to display a consistent look and feel. We provide these so you can easily find and use
    these classes.
   </p>
 
@@ -42,7 +42,7 @@ permalink: "get-started/css-classes-shortcuts/index.html"
      title="Utility CSS classes">
      <div class="p-a">
       <h3 class="h5 m-t-0">Utility CSS classes</h3>
-      <p class="font-size-16 color-black">A list of the template’s custom CSS classes.
+      <p class="font-size-16 color-black">Use the template’s custom CSS classes.
       </p>
      </div>
     </a>
@@ -53,7 +53,7 @@ permalink: "get-started/css-classes-shortcuts/index.html"
      title="Gradient Backgrounds">
      <div class="p-a">
       <h3 class="h5 m-t-0">Gradient backgrounds</h3>
-      <p class="font-size-16 color-black">Gradient background examples and their CSS classes.</p>
+      <p class="font-size-16 color-black">Apply gradient backgrounds to your pages.</p>
      </div>
     </a>
    </div>
@@ -69,8 +69,8 @@ permalink: "get-started/css-classes-shortcuts/index.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Spacing">
      <div class="p-a">
-      <h3 class="h5 m-t-0">Spacing</h3>
-      <p class="font-size-16 color-black">Spacing CSS classes you can assign to an element.
+      <h3 class="h5 m-t-0">Spacing classes</h3>
+      <p class="font-size-16 color-black">Assign spacing to an element with shorthand classes.
       </p>
      </div>
     </a>
@@ -94,13 +94,8 @@ permalink: "get-started/css-classes-shortcuts/index.html"
 
 
 
-  <h2>Bootstrap CSS and components or custom code</h2>
-  <p>We recommend that you primarily use the template styles and components.
-   However, if you have a need for more CSS classes or components, we recommend using what's available in Bootstrap
-   first before developing custom code.
-  </p>
-  <p>When you use custom code that is not part of the template, it causes you extra work when it’s time to go to the
-   next version of the template or design system.</p>
+  <h2>Bootstrap CSS</h2>
+  <p>We encourage use of the State Web Template's styles and components. If your build requires more CSS classes than we offer, use Bootstrap instead.</p>
 
 
  </div>
