updated typography page #765

--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -56,7 +56,7 @@ permalink: "visual-design/typography.html"
    <thead>
     <tr>
      <th>Name</th>
-     <th>Usage and Demo</th>
+     <th>Usage and demo</th>
      <th>Code</th>
     </tr>
    </thead>
@@ -68,7 +68,7 @@ permalink: "visual-design/typography.html"
     </tr>
     <tr>
      <td>Lead paragraph</td>
-     <td class="lead">Use for the intro paragraph on a webpage.</td>
+     <td class="lead">Use to highlight the intro paragraph on a webpage.</td>
      <td>Class: .lead<br>
       Code: font-size: calc(1.4375rem + 0.1vw);</td>
     </tr>
