updated alert banner spacing, and text #602, #761

--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -51,7 +51,7 @@ permalink: "components/alert.html"
     <div class="card-body p-b-lg">
 
 
-     <h3 class="m-t-0">Info</h3>
+     <h3 class="h4 m-t-0">Info</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
        <img src="/images/alert-info.svg" alt="alert info icon">
@@ -64,7 +64,7 @@ permalink: "components/alert.html"
      </div>
 
 
-     <h3>Warning</h3>
+     <h3 class="h4">Warning</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
        <span class="alert-icon ca-gov-icon-warning-triangle text-warning" aria-hidden="true"></span>
@@ -80,7 +80,7 @@ permalink: "components/alert.html"
 
 
 
-     <h3>Danger</h3>
+     <h3 class="h4">Danger</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
        <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
@@ -93,7 +93,7 @@ permalink: "components/alert.html"
      </div>
 
 
-     <h3>Resolution</h3>
+     <h3 class="h4">Resolution</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
        <img src="/images/alert-success.svg" alt="alert success icon">
@@ -125,7 +125,7 @@ permalink: "components/alert.html"
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
 
-     <h3 class="m-t-0">Info</h3>
+     <h3 class="h4 m-t-0">Info</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-info.svg" alt="alert info icon">
@@ -140,7 +140,7 @@ permalink: "components/alert.html"
 
 
 
-     <h3>Warning</h3>
+     <h3 class="h4">Warning</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
 <div class="container">
  <span class="alert-icon ca-gov-icon-warning-triangle text-warning" aria-hidden="true"></span>
@@ -156,7 +156,7 @@ permalink: "components/alert.html"
 
 
 
-     <h3>Danger</h3>
+     <h3 class="h4">Danger</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
@@ -171,7 +171,7 @@ permalink: "components/alert.html"
 
 
 
-     <h3>Resolution</h3>
+     <h3 class="h4">Resolution</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-success.svg" alt="alert success icon">
