updated typography page

--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -24,8 +24,8 @@ permalink: "visual-design/typography.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 id="Typography" class="mt-lg-0">Typography</h1>
-  <p class="lead">
-   Use typography to present your department's brand and content as clearly as possible.
+  <p>
+   Use typography to present your department’s brand and content as clearly as possible.
   </p>
 
   <div class="row">
