--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -199,7 +199,7 @@ permalink: "visual-design/icons.html"
           if (!filterLetter && !searchInput.length && letter !== firstLetter) {
             // show the blue letter heading
             letter = firstLetter;
-            listHtml += `<p class="h1 icons-alpha py-3 mb-0 m-t-md color-p2 p-b-0">${letter.toUpperCase()}&nbsp;<span style="font-size:1rem; font-weight:400; color:#4a4958">(${iconsByLetter.length} icons)</span></p>`;
+            listHtml += `<p class="h1 icons-alpha py-3 mb-0 m-t-md color-p2 p-b-0">${letter.toUpperCase()}</p>`;
           }
 
           listHtml += `
