icon font, content update

--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -344,9 +344,7 @@ permalink: "visual-design/icons.html"
       <li><a href="#Search-icons">Search icons</a></li>
     </ul>
 
-    <p>Icons are visual representations of commands, devices, directories, or common actions.
-    </p>
-    <p>The State Web Template uses CSS classes to customize icon color for compatibility with all popular browsers.</p>
+    <p>Icons are visual representations of commands, devices, directories, or common actions. We use CSS classes to customize icon color for compatibility with all popular browsers.</p>
 
 
     <h2 id="How-to-use-icons">How to use icons</h2>
