updated side navigation #223 #578

--- a/pages/components.html
+++ b/pages/components.html
@@ -241,6 +241,20 @@ permalink: "components.html"
   </a>
  </div>
  <div class="col-md-4 m-t-md">
+  <a href="/components/side-navigation.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Side navigation component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-sidenav.jpg" alt="Side navigation component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Side navigation</h3>
+    <p class="font-size-16 color-black">Provides a deeper level of navigation for larger websites.</p>
+   </div>
+  </a>
+ </div>
+
+ <div class="col-md-4 m-t-md">
   <a href="/components/social-media-icons.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Social media icons example">
@@ -254,6 +268,13 @@ permalink: "components.html"
    </div>
   </a>
  </div>
+</div>
+
+
+
+
+
+<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/table.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -268,14 +289,6 @@ permalink: "components.html"
    </div>
   </a>
  </div>
-</div>
-
-
-
-
-
-<div class="row">
-
 
  <div class="col-md-4 m-t-md">
   <a href="/components/tabs.html"
