--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -10,19 +10,19 @@ permalink: "get-started.html"
   <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
    <ul class="list-navigation">
     <li>
-     <a href="/get-started.html" class="active" id="page-navigation-label">Get started</a>
-     <ul>
-      <li>
-       <a href="/whats-new.html">What's new in V6</a>
-      </li>
-      <li>
-       <a href="/download-and-setup.html">Download and setup</a>
-      </li>
-      <li>
-       <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
-      </li>
-     </ul>
+     <a href="/get-started.html" class="active landing" id="page-navigation-label">Get started</a>
     </li>
+
+    <li>
+     <a href="/whats-new.html">What's new in V6</a>
+    </li>
+    <li>
+     <a href="/download-and-setup.html">Download and setup</a>
+    </li>
+    <li>
+     <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
+    </li>
+
    </ul>
   </nav>
  </div>
