--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -12,8 +12,18 @@ permalink: "get-started/css-classes-shortcuts/index.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list" class="active">CSS classes
-      shortcuts</a>
+    <li>
+     <a href="/get-started.html" class="landing" id="page-navigation-label">Get started</a>
+    </li>
+
+    <li>
+     <a href="/whats-new.html">What's new in V6</a>
+    </li>
+    <li>
+     <a href="/download-and-setup.html">Download and setup</a>
+    </li>
+    <li>
+     <a href="/get-started/css-classes-shortcuts/" class="active">CSS classes shortcuts</a>
      <ul>
       <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
@@ -29,7 +39,8 @@ permalink: "get-started/css-classes-shortcuts/index.html"
 
   <h1 class="mt-lg-0">CSS classes shortcuts</h1>
   <p>
-   The State Web Template uses CSS classes to display a consistent look and feel. We provide these so you can easily find and use
+   The State Web Template uses CSS classes to display a consistent look and feel. We provide these so you can easily
+   find and use
    these classes.
   </p>
 
@@ -95,7 +106,8 @@ permalink: "get-started/css-classes-shortcuts/index.html"
 
 
   <h2>Bootstrap CSS</h2>
-  <p>We encourage use of the State Web Template's styles and components. If your build requires more CSS classes than we offer, use Bootstrap instead.</p>
+  <p>We encourage use of the State Web Template's styles and components. If your build requires more CSS classes than we
+   offer, use Bootstrap instead.</p>
 
 
  </div>
