--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -11,26 +11,14 @@ permalink: "structure/search.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list">Structural elements</a>
-     <ul>
-      <li><a href="/structure/utility-header.html">Utility header</a></li>
-      <li><a href="/structure/settings-bar.html">Settings</a></li>
-      <li><a href="/structure/site-header.html">Site header</a></li>
-      <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-      <li><a href="/structure/search.html" class="active">Search</a>
-       <ul>
-        <li><a href="#Active-search">Active search</a></li>
-        <li><a href="#Inactive-search">Inactive search</a></li>
-        <li><a href="#Featured-search">Featured search</a></li>
-        <li><a href="#Usage">Usage</a></li>
-        <li><a href="#Accessibility">Accessibility</a></li>
-       </ul>
-      </li>
-    </li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure/utility-header.html">Utility header</a></li>
+    <li><a href="/structure/settings-bar.html">Settings</a></li>
+    <li><a href="/structure/site-header.html">Site header</a></li>
+    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+    <li><a href="/structure/search.html" class="active">Search</a></li>
     <li><a href="/structure/site-navigation.html">Site navigation</a></li>
     <li><a href="/structure/footer.html">Footer</a></li>
-   </ul>
-   </li>
    </ul>
   </nav>
  </div>
