--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -13,26 +13,14 @@ permalink: "structure/site-navigation.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list">Structural elements</a>
-     <ul>
-      <li><a href="/structure/utility-header.html">Utility header</a></li>
-      <li><a href="/structure/settings-bar.html">Settings</a></li>
-      <li><a href="/structure/site-header.html">Site header</a></li>
-      <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-      <li><a href="/structure/search.html">Search</a></li>
-      <li><a href="/structure/site-navigation.html" class="active">Site navigation</a>
-       <ul>
-        <li><a href="#Single-level-menu">Single level menu</a></li>
-        <li><a href="#Dropdown-menu">Dropdown menu</a></li>
-        <li><a href="#Megamenu">Megamenu</a></li>
-        <li><a href="#Icon-menu">Icon menu</a></li>
-        <li><a href="#Usage">Usage</a></li>
-        <li><a href="#Accessibility">Accessibility</a></li>
-       </ul>
-      </li>
-      <li><a href="/structure/footer.html">Footer</a></li>
-     </ul>
-    </li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure/utility-header.html">Utility header</a></li>
+    <li><a href="/structure/settings-bar.html">Settings</a></li>
+    <li><a href="/structure/site-header.html">Site header</a></li>
+    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+    <li><a href="/structure/search.html">Search</a></li>
+    <li><a href="/structure/site-navigation.html" class="active">Site navigation</a></li>
+    <li><a href="/structure/footer.html">Footer</a></li>
    </ul>
   </nav>
  </div>
