--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -9,15 +9,11 @@ permalink: "visual-design/typography.html"
 <div class="row">
  <div class="col-md-3" role="complementary">
   <!-- Side navigation -->
-  <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
+  <nav aria-label="Side navigation" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="#Typography" class="active">Typography </a>
-     <ul>
-      <li><a href="#Typeface">Typeface</a></li>
-      <li><a href="#Fontcode">Font code</a></li>
-      <li><a href="#Headinghierarchy">Heading hierarchy</a></li>
-     </ul>
-    </li>
+    <li><a href="/visual-design/color.html">Colors</a></li>
+    <li><a href="/visual-design/icons.html">Icons</a></li>
+    <li><a href="/visual-design/typography.html" class="active">Typography</a></li>
    </ul>
   </nav>
  </div>
