--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -6,25 +6,7 @@ permalink: "template-updates.html"
 ---
 
 <div class="row">
- <div class="col-md-3">
-  <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
-   <ul class="list-navigation">
-    <li>
-     <a href="/template-updates.html" class="active" id="page-navigation-label">Template updates</a>
-     <ul>
-      <li>
-       <a href="#v6">Release features</a>
-      </li>
-      <!-- <li>
-              <a href="#update">Update your template</a>
-            </li> -->
-     </ul>
-    </li>
-
-   </ul>
-  </nav>
- </div>
- <div class="col-md-9 p-b-lg">
+ <div class="col-md-10 p-b-lg mx-auto">
 
   <h1 class="mt-lg-0">Template updates</h1>
   <p>We are continually improving the California State Web Template. View release features by date for
