--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -11,16 +11,18 @@ permalink: "whats-new.html"
  <div class="col-md-3">
   <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
    <ul class="list-navigation">
-    <li><a href="/template-updates.html" class="active" id="page-navigation-label">What's new in V6</a>
-     <ul>
-      <li><a href="#Patterns">Patterns</a></li>
-      <li><a href="#Code">Code</a></li>
-      <li><a href="#Navigation">Navigation</a></li>
-      <li><a href="#Visual-design">Visual design</a></li>
-      <li><a href="#Components">Components</a></li>
-      <li><a href="#User-experience">User experience</a></li>
-      <li><a href="#Brand-new-content">Brand new content</a></li>
-     </ul>
+    <li>
+     <a href="/get-started.html" class="landing" id="page-navigation-label">Get started</a>
+    </li>
+
+    <li>
+     <a href="/whats-new.html" class="active">What's new in V6</a>
+    </li>
+    <li>
+     <a href="/download-and-setup.html">Download and setup</a>
+    </li>
+    <li>
+     <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
     </li>
    </ul>
   </nav>
