--- a/pages/sample/structure-settings-bar.html
+++ b/pages/sample/structure-settings-bar.html
@@ -11,23 +11,14 @@ permalink: "structure/settings-bar.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list">Structural elements</a>
-     <ul>
-      <li><a href="/structure/utility-header.html">Utility header</a></li>
-      <li><a href="/structure/settings-bar.html" class="active">Settings</a>
-       <ul>
-        <li><a href="#Sample">Sample</a></li>
-        <li><a href="#Usage">Usage</a></li>
-        <li><a href="#Accessibility">Accessibility</a></li>
-       </ul>
-      </li>
-      <li><a href="/structure/site-header.html">Site header</a></li>
-      <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-      <li><a href="/structure/search.html">Search</a></li>
-      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
-      <li><a href="/structure/footer.html">Footer</a></li>
-     </ul>
-    </li>
+    <li><a href="/structure.html" id="navigation-list" class="landing">Structural elements</a></li>
+    <li><a href="/structure/utility-header.html">Utility header</a></li>
+    <li><a href="/structure/settings-bar.html" class="active">Settings</a></li>
+    <li><a href="/structure/site-header.html">Site header</a></li>
+    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+    <li><a href="/structure/search.html">Search</a></li>
+    <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+    <li><a href="/structure/footer.html">Footer</a></li>
    </ul>
   </nav>
  </div>
