--- a/pages/structure.html
+++ b/pages/structure.html
@@ -14,17 +14,14 @@ permalink: "structure.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="active">Structural elements</a>
-     <ul>
-      <li><a href="/structure/utility-header.html">Utility header</a></li>
-      <li><a href="/structure/settings-bar.html">Settings</a></li>
-      <li><a href="/structure/site-header.html">Site header</a></li>
-      <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-      <li><a href="/structure/search.html">Search</a></li>
-      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
-      <li><a href="/structure/footer.html">Footer</a></li>
-     </ul>
-    </li>
+    <li><a href="/structure.html" id="navigation-list" class="active landing">Structural elements</a></li>
+    <li><a href="/structure/utility-header.html">Utility header</a></li>
+    <li><a href="/structure/settings-bar.html">Settings</a></li>
+    <li><a href="/structure/site-header.html">Site header</a></li>
+    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+    <li><a href="/structure/search.html">Search</a></li>
+    <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+    <li><a href="/structure/footer.html">Footer</a></li>
    </ul>
   </nav>
  </div>
