updated side navigation page

--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -134,17 +134,17 @@ permalink: "/components/side-navigation.html"
      <div class="row">
       <div class="col-lg-4">
        <p class="bold m-b">Level 1a:</p>
-       <p class="m-b-lg font-size-16">with landing page<br> selected</p>
-       {% include "../../src/_includes/modules/side-navigation.html" %}
+       <p class="m-b-lg font-size-16">With landing page<br> selected.</p>
+       {% include "../../src/_includes/modules/side-navigation-level1.html" %}
       </div>
       <div class="col-lg-4">
        <p class="bold m-b">Level 1b:</p>
-       <p class="m-b-lg font-size-16">with sublanding page selected</p>
+       <p class="m-b-lg font-size-16">With sublanding page selected.</p>
        {% include "../../src/_includes/modules/side-navigation-level2.html" %}
       </div>
       <div class="col-lg-4">
        <p class="bold m-b">Level 2:</p>
-       <p class="m-b-lg font-size-16">with page under the sublanding page selected</p>
+       <p class="m-b-lg font-size-16">With page under the sublanding page selected.</p>
        {% include "../../src/_includes/modules/side-navigation-level3.html" %}
       </div>
      </div>
@@ -338,12 +338,12 @@ permalink: "/components/side-navigation.html"
  </div>
  <div class="col-md-5">
   <ul class="list-navigation">
-   <li><a href="#" class="landing active">Types of parties</a></li>
-   <li><a href="#">Birthday</a></li>
-   <li><a href="#">Dance party</a></li>
-   <li><a href="#">Dance party</a></li>
-   <li><a href="#">New year's eve</a></li>
-   <li><a href="#">Office party</a></li>
+   <li><a href="javascript:;" class="landing active">Types of parties</a></li>
+   <li><a href="javascript:;">Birthday</a></li>
+   <li><a href="javascript:;">Dance party</a></li>
+   <li><a href="javascript:;">Holiday party</a></li>
+   <li><a href="javascript:;">New year's eve</a></li>
+   <li><a href="javascript:;">Office party</a></li>
   </ul>
  </div>
 </div>
@@ -360,19 +360,19 @@ permalink: "/components/side-navigation.html"
  </div>
  <div class="col-md-5">
   <ul class="list-navigation">
-   <li><a href="#" class="landing">Types of parties</a></li>
-   <li><a href="#" class="active">Birthday</a>
+   <li><a href="javascript:;" class="landing">Types of parties</a></li>
+   <li><a href="javascript:;" class="active">Birthday</a>
     <ul>
-     <li><a href="#">Picking a theme</a></li>
-     <li><a href="#">Planning</a></li>
-     <li><a href="#">Day of the party</a></li>
-     <li><a href="#">After the party</a></li>
+     <li><a href="javascript:;">Picking a theme</a></li>
+     <li><a href="javascript:;">Planning</a></li>
+     <li><a href="javascript:;">Day of the party</a></li>
+     <li><a href="javascript:;">After the party</a></li>
     </ul>
    </li>
-   <li><a href="#">Dance party</a></li>
-   <li><a href="#">Dance party</a></li>
-   <li><a href="#">New year's eve</a></li>
-   <li><a href="#">Office party</a></li>
+   <li><a href="javascript:;">Dance party</a></li>
+   <li><a href="javascript:;">Holiday party</a></li>
+   <li><a href="javascript:;">New year's eve</a></li>
+   <li><a href="javascript:;">Office party</a></li>
   </ul>
  </div>
 </div>
@@ -397,22 +397,22 @@ permalink: "/components/side-navigation.html"
  </div>
  <div class="col-md-5">
   <ul class="list-navigation">
-   <li><a href="#" class="landing back">Birthday</a></li>
-   <li><a href="#">Picking a theme</a></li>
-   <li><a href="#" class="active">Planning</a>
+   <li><a href="javascript:;" class="landing back">Birthday</a></li>
+   <li><a href="javascript:;">Picking a theme</a></li>
+   <li><a href="javascript:;" class="active">Planning</a>
     <ul>
-     <li><a href="#">Budget</a></li>
-     <li><a href="#">Guest list</a></li>
-     <li><a href="#">Invitations</a></li>
-     <li><a href="#">Decor</a></li>
-     <li><a href="#">Food and drinks</a></li>
-     <li><a href="#">Surprise?</a></li>
-     <li><a href="#">Activities</a></li>
-     <li><a href="#">Gifts</a></li>
+     <li><a href="javascript:;">Budget</a></li>
+     <li><a href="javascript:;">Guest list</a></li>
+     <li><a href="javascript:;">Invitations</a></li>
+     <li><a href="javascript:;">Decor</a></li>
+     <li><a href="javascript:;">Food and drinks</a></li>
+     <li><a href="javascript:;">Surprise?</a></li>
+     <li><a href="javascript:;">Activities</a></li>
+     <li><a href="javascript:;">Gifts</a></li>
     </ul>
    </li>
-   <li><a href="#">Day of the party</a></li>
-   <li><a href="#">After the party</a></li>
+   <li><a href="javascript:;">Day of the party</a></li>
+   <li><a href="javascript:;">After the party</a></li>
   </ul>
  </div>
 </div>
